Technical Part added

--- a/User Manual/User Manual.tex
+++ b/User Manual/User Manual.tex
@@ -243,6 +243,18 @@ Moreover, one could add this parameter to the other Custom parameters, so that a
 % The following statement causes the specified references to be added to the bibliography% even if they were not 
 % cited in the text. The asterisk is a wildcard that causes all entries in the bibliographic database to be included (optional).
 
+\section{Technical background}
+
+\subsection{Frontend}
+The webapplication is optimized for Google Chrome (Version 65) and Mozilla Firefox (Version 60). 
+The application has not been tested for Internet Explorer or other browser versions, so that some parts may not work properly 
+or the webinterface differs from the pictures. In order to access the API it is necessary to interpret JSON object corretly.
+
+
+\subsection{Backend}
+The application backend can be executed an Windows and Linux applicatoin server. 
+This requires a Python version later than 3.6 and a Flask version later than 1.0. The index.py file in the application root dir indicates the 
+entry point for the webapplicatoin.
 
 \begin{thebibliography}{5}
 \bibitem{paper}
